--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "watch-css": "npm run build-css -- --watch"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "json-server": "^0.17.0",
-    "nodemon": "^3.1.10"
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
+    "json-server": "^0.17.4",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
